# AGH-Programowanie-Obiektowe-Cpp-lv2

./: 7zajl.rar  Makefile  README.md  main.cpp  shape.h  shape_ptr.h
10zajl/VPL_Lab10_L6/: main.cpp
10zajl/VPL_Lab10_L6_MOJE/: Makefile  bhcat.h  blackhole.h  main  main.cpp
11zajl/: Lab11_Szeliga_tuple_na_Time.tar.xz
11zajl/Dla_Kotko/: human.h  main.cpp  spacecraft.h
11zajl/VPL_Lab11_L6/: Makefile  human.h  main  main.cpp  spacecraft.h
1zajl/: Makefile
1zajl/lab1(1)/lab1/: wire.cpp  wire.h
1zajl/lab1/include/: wire.h
1zajl/lab1/src/: CMakeLists.txt  main.cpp  wire.cpp
2zajl/lab2_l6/include/: vector.h
2zajl/lab2_l6/src/: CMakeLists.txt  main.cpp  vector.cpp
3zajl/lab3_Szeliga_final/include/: matrix.h
3zajl/lab3_Szeliga_final/src/: CMakeLists.txt  main.cpp  matrix.cpp
3zajl/lab3make/: Makefile  main  main.cpp  matrix.cpp
4zajl/4labcmake/include/: board.h  game.h  matrix.h  sapper.h  sapper_board.h  vector.h
4zajl/4labcmake/src/: CMakeLists.txt  board.cpp  sapper.cpp  sapper_board.cpp  vector.cpp
4zajl/testy/: GAME  Makefile  board.h  game.cpp  sapper.cpp  sapper.h  sapper_board.cpp  sapper_board.h
5zajl/5labcmake/: CMakeLists.txt
5zajl/5labcmake/include/: coronavirus.h  dna.h
5zajl/5labcmake/src/: CMakeLists.txt  coronavirus.cpp  dna.cpp  gene_sequence.cpp  main.cpp  virus.cpp
6zajl/VPL_Lab6_L6/: Makefile
6zajl/VPL_Lab6_L6/include/: bacteria.h  (+7 more)
8zajl/VPL_Lab8_L6/: Makefile  main.cpp
9zajl/VPL_Lab9_L6/: Makefile  main  main.cpp  rover.h  rover_iface.h  utils.h
Alina_smartpointer/: Makefile  SmartPtr.h  TestClass.h  main  main.cpp
(+5 files in other folders)
